compilateurDeca/src/test/deca/context/invalid/objet/declarations/double_def_field.deca
// Description:
//    Test de contexte : Champ déclaré deux fois dans la même classe
//
// Resultats:
//    Erreur contextuelle : Nom d’attribut déjà déclaré
//    (ou "Le champ 'x' est déjà défini dans cette classe")
//
// Historique:
//    cree le 15/01/2026

class A {
    int x;
    float x;
}
